--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -264,6 +264,10 @@
                 <div class="story">
                     <figure class="story__shape">
                         <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+
+                        <figcaption class="story__caption">
+                            Mary Smith
+                        </figcaption>
                     </figure>
 
                     <div class="story__text">
@@ -276,6 +280,31 @@
                         </p>
                     </div>
                 </div>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption">
+                            Jack Wilson
+                        </figcaption>
+                    </figure>
+
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            WOW! My life is completely different now
+                        </h3>
+
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi assumenda at consectetur consequuntur doloremque eligendi expedita id magnam nulla odio odit provident quis similique sint suscipit ut vero, voluptatibus! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn-text">Read all stories &rarr;</a>
             </div>
         </section>
     </main>
