feat: build booking section - part 2

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -333,7 +333,7 @@
                             </div>
 
                             <div class="form__group">
-                                <input id="email" type="text" class="form__input" placeholder="E-mail address" required autocomplete="off">
+                                <input id="email" type="email" class="form__input" placeholder="E-mail address" required autocomplete="off">
                                 <label for="email" class="form__label">E-mail address</label>
                             </div>
                         </form>
