--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -336,6 +336,28 @@
                                 <input id="email" type="email" class="form__input" placeholder="E-mail address" required autocomplete="off">
                                 <label for="email" class="form__label">E-mail address</label>
                             </div>
+
+                            <div class="form__group">
+                                <div class="form__radio-group u-margin-bottom-medium">
+                                    <input id="small" type="radio" class="form__radio-input" name="size">
+                                    <label for="small" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Small tour group
+                                    </label>
+                                </div>
+
+                                <div class="form__radio-group">
+                                    <input id="large" type="radio" class="form__radio-input" name="size">
+                                    <label for="large" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Large tour group
+                                    </label>
+                                </div>
+
+                                <div class="form__radio-group">
+                                    <button class="btn btn--green">Next Step &rarr;</button>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
