feat: build a popup - part 1

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -287,7 +287,9 @@
             <div class="bg-video">
                 <video class="bg-video__content" autoplay muted loop>
                     <source src="img/video.mp4" type="video/mp4">
+
                     <source src="img/video.webm" type="video/webm">
+
                     Your browser is not supported!
                 </video>
             </div>
@@ -439,6 +441,32 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+
+                <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+
+            <div class="popup__right">
+                <h2 class="heading-secondary u-margin-bottom-small">
+                    Start booking now
+                </h2>
+
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                    Important &ndash; Please read these terms before booking
+                </h3>
+
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet cupiditate explicabo magni natus nesciunt odit omnis! A corporis, deserunt doloribus excepturi exercitationem illo illum ipsa ipsum labore magni molestiae molestias reiciendis tenetur? Adipisci, beatae ipsum iusto modi nemo temporibus voluptas. Ducimus facere magnam minus quasi rem voluptatem voluptatibus.
+                </p>
+
+                <a href="#" class="btn btn--green">Book now</a>
+            </div>
+        </div>
+    </div>
 
 <!--
 <section class="grid">
