--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -54,7 +54,7 @@
                 <span class="heading-primary--sub">is where life happens</span>
             </h1>
 
-            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+            <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
 
@@ -146,7 +146,7 @@
             </div>
         </section>
 
-        <section class="section-tours">
+        <section id="section-tours" class="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Most popular tours
@@ -189,7 +189,7 @@
                                     </p>
                                 </div>
 
-                                <a href="#" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -230,7 +230,7 @@
                                     </p>
                                 </div>
 
-                                <a href="#" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -271,7 +271,7 @@
                                     </p>
                                 </div>
 
-                                <a href="#" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
                     </div>
@@ -348,7 +348,7 @@
             </div>
         </section>
 
-        <section class="section-book">
+        <section id="section-book" class="section-book">
             <div class="row">
                 <div class="book">
                     <div class="book__form">
@@ -442,7 +442,7 @@
         </div>
     </footer>
 
-    <div class="popup">
+    <div id="popup" class="popup">
         <div class="popup__content">
             <div class="popup__left">
                 <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
@@ -451,6 +451,8 @@
             </div>
 
             <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+
                 <h2 class="heading-secondary u-margin-bottom-small">
                     Start booking now
                 </h2>
@@ -463,7 +465,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet cupiditate explicabo magni natus nesciunt odit omnis! A corporis, deserunt doloribus excepturi exercitationem illo illum ipsa ipsum labore magni molestiae molestias reiciendis tenetur? Adipisci, beatae ipsum iusto modi nemo temporibus voluptas. Ducimus facere magnam minus quasi rem voluptatem voluptatibus.
                 </p>
 
-                <a href="#" class="btn btn--green">Book now</a>
+                <a href="#section-book" class="btn btn--green">Book now</a>
             </div>
         </div>
     </div>
