--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -385,10 +385,10 @@
                                         Large tour group
                                     </label>
                                 </div>
+                            </div>
 
-                                <div class="form__radio-group">
-                                    <button class="btn btn--green">Next Step &rarr;</button>
-                                </div>
+                            <div class="form__group">
+                                <button class="btn btn--green">Next Step &rarr;</button>
                             </div>
                         </form>
                     </div>
