feat: build gallery section - part 1

--- a/Nexter/starter/index.html
+++ b/Nexter/starter/index.html
@@ -379,7 +379,29 @@
         </section>
 
         <section class="gallery">
-            Gallery
+            <figure class="gallery__item gallery__item--1">
+                <img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--2">
+                <img src="img/gal-2.jpeg" alt="Gallery image 2" class="gallery__img">
+            </figure>
+
+            <figure class="gallery__item gallery__item--3">
+
+            </figure>
+
+            <figure class="gallery__item gallery__item--4">
+
+            </figure>
+
+            <figure class="gallery__item gallery__item--5">
+
+            </figure>
+
+            <figure class="gallery__item gallery__item--6">
+
+            </figure>
         </section>
 
         <footer class="footer">
